@@ -253,6 +253,8 @@
       \item \code{utils::URLencode()} was updated to use unreserved and
       reserved characters from RFC 3986,
       \url{http://tools.ietf.org/html/rfc3986}, instead of RFC 1738.
+
+      \item \code{unique(warnings())} now works, as does \code{c()}.
     }
   }
 
